--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="utf-8"/>
-      <title>{{ page.title }}</title>
-   </head>
-   <body>
-      {{ content }}
-   </body>
+
+  {% include head.html %}
+
+  <body>
+
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+
 </html>
